--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,8 @@
 #root {
+  display: grid;
+  place-items: center;
+  width: 100vw;
+  height: 100vh;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
