Add generic test id handling

--- a/frontend/src/views/Home.css
+++ b/frontend/src/views/Home.css
@@ -1,4 +1,4 @@
-#home-add-event-button {
+.home-add-event-button {
   text-decoration: none;
   border: 2px solid whitesmoke;
   border-radius: 20px;
